# deployment-events-api

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/deployment_events_api/: __init__.py  comparison.py  dependencies.py  main.py  models.py  repository.py  seed.py
src/deployment_events_api/data/: seed_deployments.json
src/deployment_events_api/routers/: comparisons.py  deployments.py
src/deployment_events_api/static/: app.js  index.html  styles.css
tests/: test_compare.py  test_deployments.py
