[project]
name = "deployment-events-api"
version = "1.0.0"
description = "A lightweight REST API for ingesting and serving deployment event data."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

[project.scripts]
deployment-events-api = "deployment_events_api.main:main"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deployment_events_api"]
# Static UI assets and seed data ship with the package.
artifacts = [
    "src/deployment_events_api/static/*",
    "src/deployment_events_api/data/*.json",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, pyupgrade, flake8-bugbear, comprehensions.
select = ["E", "F", "I", "UP", "B", "C4", "W"]
